tcpc: Resume suspended ports after an interval

When it appears that the TCPC queue handling logic may be stuck in an
infinite loop, the EC will break the loop by disabling the port in order
to avoid task starvation.  However, nothing attempts to resume the port,
and it therefore remains disabled until the next EC reset.  Wake back up
after a reasonable interval in order to automatically retry.  On port
suspend, completely drain the TCPM message queue.

BUG=chromium:891713
TEST=On Careena hardware, with analogix TCPC firmware v1.5 and an
electronically marked cable that sends SOP' messages, verify that the EC
auto-retries every second.  After removing the offending cable, and PD
power supply will work.
BRANCH=grunt

Change-Id: I563b763501333eb36ee1f76e6f484ebb3245c82a
Signed-off-by: Jonathan Brandmeyer <jbrandmeyer@chromium.org>